[package]
name = "minivtun-rs"
version = "0.1.5"
authors = ["optman <optman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["holepunch", "build-binary"]
holepunch = ["rndz"]
build-binary = ["daemonize", "clap", "env_logger"]

[dependencies]
tun="0.5.3"
packet="0.1.4"
libc="0.2.101"
byteorder="1.4.3"
thiserror="1.0.29"
num_enum="0.5.4"
ipnet="2.3.1"
clap={version="2.33", optional=true}
rand="0.4.6"
log="0.4.14"
env_logger={version="0.9.0", optional=true}
daemonize={version="0.4.1", optional=true}
aes={ tag = "aes-v0.7.5", git="https://github.com/RustCrypto/block-ciphers"}
block-modes={ tag = "aes-v0.7.5",  git="https://github.com/RustCrypto/block-ciphers"}
md-5={ tag = "md5-v0.9.1", git="https://github.com/RustCrypto/hashes"}
nix="0.22.0"
rndz={rev="70be7838b0",  optional=true, git="https://github.com/optman/rndz"}
size = "0.4"


[lib]
name = "minivtun"

[[bin]]
name = "minivtun-rs"
required-features=["build-binary"]
