[package]
name = "minivtun-rs"
version = "0.1.9"
authors = ["optman <optman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["holepunch", "build-binary"]
holepunch = ["rndz"]
build-binary = ["daemonize", "clap", "env_logger"]

[dependencies]
tun = "0.7.3"
packet = "0.1.4"
libc = "0.2.164"
byteorder = "1.5.0"
thiserror = "2.0.3"
num_enum = "0.7.3"
ipnet = "2.10.1"
clap = { version = "2.33", optional = true }
rand = "0.8.5"
log = "0.4.22"
env_logger = { version = "0.11.5", optional = true }
daemonize = { version = "0.5.0", optional = true }
aes = { tag = "aes-v0.7.5", git = "https://github.com/RustCrypto/block-ciphers" }
block-modes = { tag = "aes-v0.7.5", git = "https://github.com/RustCrypto/block-ciphers" }
md-5 = { tag = "md5-v0.9.1", git = "https://github.com/RustCrypto/hashes" }
nix = { version = "0.29.0", features = ["socket"] }
rndz = { rev = "530e4f98", optional = true, git = "https://github.com/optman/rndz" }
size = "0.4.1"
pretty-duration = "*"


[lib]
name = "minivtun"

[[bin]]
name = "minivtun-rs"
required-features = ["build-binary"]
